Fix Images on mobile
Article images should be inside the screen (not overflow) (`max-width:
100%`). In mobile, links will be created so the user can see the image
in full resolution (real size) clicking inside the image.

--- a/themes/notmyidea_gbzando/static/css/style_gbzando.css
+++ b/themes/notmyidea_gbzando/static/css/style_gbzando.css
@@ -315,6 +315,9 @@ h3 a.toclink:hover:after, h4 a.toclink:hover:after, h5 a.toclink:hover:after,
 .center {
     text-align: center;
 }
+.center img {
+    max-width: 100%;
+}
 
 /* Quotes */
 blockquote {
